--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.32.12",
     "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vuetify-loader": "^1.7.2"
   }
 }
